Refine: Unified UI color palette, simplified dashboard, polished analysis modal animations, and fixed SidePanel chat reset bug

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# generated assets
+/public/reports/
+/public/visions/
+tmp_old_gallery.tsx
